--- a/cn.zh-CN/用户指南/管理实例/创建实例.md
+++ b/cn.zh-CN/用户指南/管理实例/创建实例.md
@@ -1,34 +1,55 @@
 # 创建实例 {#concept_x5m_fnk_x2b .concept}
 
-## 注意事项 { .section}
+## 注意事项 {#section_npm_ypl_x2b .section}
 
 -   使用HybridDB for MySQL不需要购买RDS实例。
 
--   为了减少公网稳定性带来的性能损失，建议购买ECS与HybridDB for MySQL搭配使用；若没有购买ECS，您也可以直接从公网连接访问 HybridDB for MySQL。
+-   为了减少公网稳定性带来的性能损失，建议购买ECS与HybridDB for MySQL搭配使用；若没有购买ECS，用户也可以直接从公网连接访问HybridDB for MySQL。
 
--   若您需要创建节点更多或者节点规格更大的实例，请[联系我们](https://workorder.console.aliyun.com/console.htm?spm=5176.doc26327.2.2.8cFbee#/ticket/add?productCode=petadata)。
+-   若用户需要创建节点更多或者节点规格更大的实例，请[联系我们](https://workorder.console.aliyun.com/console.htm?spm=5176.doc26327.2.2.8cFbee#/ticket/add?productCode=petadata)。
 
-## 操作步骤 { .section}
+## 前提条件 { .section}
 
-1.  登录[HybridDB for MySQL管理控制台](https://petadata.console.aliyun.com/)，单击**新建实例**。
-2.  选择**地域**和**可用区**，并设置**数据库名**、**实例名称**、**网络类型**、**帐号名**和**密码**。
+-   已注册阿里云账号。若尚未注册，请前往[阿里云官网](http://www.aliyun.com/)进行注册。
+-   阿里云账户余额大于等于 100 元。
 
-    **说明：** 
+## 操作步骤 {#section_phb_1ql_x2b .section}
 
-    -   若需要从ECS上通过阿里云内网访问使用HybridDB for MySQL，HybridDB for MySQL 实例必须选择与ECS相同的地域/可用区。
+1.  登录[HybridDB for MySQL 管理控制台](https://petadata.console.aliyun.com/)。
+2.  单击页面右上角的**新建实例**，进入实例购买页面。
+3.  选择计费方式。
+    -   **按量付费**：属于后付费，即按小时扣费。适合短期需求，用完可立即释放实例，节省费用。
+    -   **预付费**：即包年包月计费方式，即在新建实例时需要支付费用。适合长期需求，价格比按量付费更实惠，且购买时长越长，折扣越多。
 
-    -   在创建实例时，必须同时创建该实例下的数据库。
+        **说明：** 按量付费实例可以转为包年包月实例；包年包月实例无法转为按量付费实例。
 
-    -   **实例名称**，支持中文字符，您可以填写有实际说明意义的内容。实例创建成功后，您可通过实例ID 下方的修改图标修改实例名称。
+4.  设置以下参数。
 
-    -   **数据库名**不支持中文字符，一旦填写之后不可以修改。
+    |参数|说明|
+    |--|--|
+    |地域| 实例所在的地理位置。购买后无法更换地域。
 
-    -   HybridDB for MySQL 的计费方式为“**按数据库计费**”，而不是“按实例计费”。您根据自身业务评估，选择所需的节点规格及节点数量，创建数据库。例如，选择购买2个512 GB的SSD节点，可以构建一个容量为1TB的HybridDB for MySQL数据库。
+     -   请根据目标用户所在的地理位置就近选择地域，提升用户访问速度。
+    -   请确保实例与需要连接的ECS实例创建于同一个地域，否则它们无法通过内网互通，只能通过外网互通，无法发挥最佳性能。
+ |
+    |可用区| 可用区是地域中的一个独立物理区域，不同可用区之间没有实质性区别。您可以选择将实例与ECS实例创建在同一可用区或不同的可用区。
 
-    -   **帐号**为您访问数据的信息，请按要求设定账号名及密码。
+ |
+    |节点规格|目前提供两种节点规格：    -   高性能存储规格（TokuDB引擎）
+    -   高性能计算规格（CStore引擎）
+|
+    |网络|     -   经典网络：传统的网络类型。
+    -   专有网络（推荐）：也称为VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。如果选择专有网络，你需要事先创建与实例在同一地域下的 VPC 和交换机，具体步骤请参考[专有网络](https://help.aliyun.com/document_detail/65398.html)。
+ |
+    |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。|
+    |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。实例创建成功后，用户可通过实例名称下方的修改图标修改实例名称。|
+    |密码|为实例账户的密码，请按照要求填写。|
+    |节点数|默认节点数为两个，包年包月实例的节点上限为64个，按量付费实例的节点上限为128个。|
 
-3.  设置完成，单击**立即购买**。
+5.  设置完成后，单击**立即购买**。
+6.  在确认订单页面，勾选计费类型对应的服务协议，然后单击**去开通**完成订单支付。
+7.  用户可在实例列表页面查看新建实例。
 
-    HybridDB for MySQL 数据库初始化需要一定时间，一般不超过20分钟，待管理控制台首页上实例运行状态显示为“**运行中**”，即可进行后续操作。
+    HybridDB for MySQL数据库初始化需要一定时间，一般不超过20分钟，待管理控制台首页上实例运行状态显示为**运行中**，即可进行后续操作。
 
 
