--- a/intl.zh-CN/用户指南/管理实例/创建实例.md
+++ b/intl.zh-CN/用户指南/管理实例/创建实例.md
@@ -39,7 +39,7 @@
     -   高性能计算规格（CStore引擎）
 |
     |网络|     -   经典网络：传统的网络类型。
-    -   专有网络（推荐）：也称为VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。如果选择专有网络，你需要事先创建与实例在同一地域下的 VPC 和交换机，具体步骤请参考[专有网络](https://help.aliyun.com/document_detail/65398.html)。
+    -   专有网络（推荐）：也称为VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。如果选择专有网络，你需要事先创建与实例在同一地域下的 VPC 和交换机，具体步骤请参考[专有网络](https://www.alibabacloud.com/help/zh/doc-detail/65398.html)。
  |
     |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。|
     |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。实例创建成功后，用户可通过实例名称下方的修改图标修改实例名称。|
