--- a/cn.zh-CN/产品简介/实例规格.md
+++ b/cn.zh-CN/产品简介/实例规格.md
@@ -2,21 +2,19 @@
 
 HybridDB for MySQL提供两种实例规格族：
 
--   高性能存储规格：存储引擎为事务引擎TokuDB，更多内容请参见[事务引擎手册](cn.zh-CN/产品简介/HybridDB for MySQL 概述.md#)。
--   高性能计算规格：存储引擎为分析引擎CStore，更多内容请参见[分析引擎手册](../../../../cn.zh-CN/分析引擎手册/概念和限制/节点__数据库__表__分区__二级分区.md#)。
+-   高性能存储引擎：存储引擎为事务引擎TokuDB，更多内容请参见[事务引擎手册](cn.zh-CN/产品简介/HybridDB for MySQL 概述.md#)。
+-   高性能计算引擎：存储引擎为分析引擎CStore，更多内容请参见[分析引擎手册](../../../../cn.zh-CN/分析引擎手册/概念和限制/节点__数据库__表__分区__二级分区.md#)。
 
-如需购买，请参见[云数据库HybridDB for MySQL详细价格信息](https://www.aliyun.com/price/product#/petadata/detail)。
-
-|规格族|描述|描述|适用场景|
+|规格族|规格|描述|适用场景|
 |---|--|--|----|
-|高性能存储规格|petadata.s2.xlarge（8核/32GB/512GB SSD）
+|高性能存储引擎|petadata.s2.xlarge（8核/32GB/512GB SSD）
 
 |存储节点为TokuDB，支持同时提供高压缩和高吞吐能力。| -   海量历史归档的场景；
 -   高吞吐数据交换的场景；
 -   用户业务系统需要水平扩展的场景。
 
  |
-|高性能计算规格|petadata.c2.xlarge（8核/32GB/512GB SSD）
+|高性能计算引擎|petadata.c2.xlarge（8核/32GB/512GB SSD）
 
 |存储节点为阿里云自研的列式存储引擎CStore，可提供更加强大的查询性能，以及万亿级多维度的复杂分析的能力。| -   BI/报表等决策支持的场景；
 -   中心库进行实时分析的场景；
