--- a/intl.zh-CN/快速入门/申请外网地址.md
+++ b/intl.zh-CN/快速入门/申请外网地址.md
@@ -44,5 +44,13 @@
 4.  在基本信息页面的连接信息处，单击**申请外网**。
 5.  系统弹出对话框，点击**确定**，生成外网地址。
 
+## 释放外网地址 {#section_bsr_nhx_yfb .section}
+
 生成外网地址后，可在基本信息页面的连接信息处，通过**释放外网地址**按键释放外网地址。
+
+**说明：** 
+
+-   执行释放外网地址之前，请先阅读本章节的应用场景。
+-   如果您的应用之前采用外网地址连接实例，在释放外网地址后，请您及时更改应用的连接设置。
+-   创建实例之后，如果还未申请外网地址， **释放外网地址**按键为灰色。
 
