--- a/cn.zh-CN/快速入门/申请外网地址.md
+++ b/cn.zh-CN/快速入门/申请外网地址.md
@@ -1,6 +1,6 @@
 # 申请外网地址 {#concept_mnl_pmk_x2b .concept}
 
-如果您的应用部署在与您的HybridDB for MySQL实例在同一地域且[网络类型](../../../../cn.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，则无需申请外网地址。如果您的应用部署在与您的HybridDB for MySQL实例在不同地域或网络类型不同的ECS或者阿里云以外的系统上，需申请外网地址，用于对接应用。
+如果您的应用部署在与您的HybridDB for MySQL实例在同一地域且[网络类型](../../../../intl.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，则无需申请外网地址。如果您的应用部署在与您的HybridDB for MySQL实例在不同地域或网络类型不同的ECS或者阿里云以外的系统上，需申请外网地址，用于对接应用。
 
 **说明：** 
 
@@ -14,7 +14,7 @@
 
     -   系统默认提供内网地址，您可以直接修改连接地址。
 
-    -   适用于应用部署在与您的HybridDB for MySQL实例在同一地域的ECS上且实例与ECS的[网络类型](../../../../cn.zh-CN/用户指南/管理实例/切换网络类型.md#)相同时。
+    -   适用于应用部署在与您的HybridDB for MySQL实例在同一地域的ECS上且实例与ECS的[网络类型](../../../../intl.zh-CN/用户指南/管理实例/切换网络类型.md#)相同时。
 
 -   单独使用外网地址：
 
@@ -24,14 +24,14 @@
 
 -   同时使用内外网地址：
 
-    -   适用于应用中有些模块部署在与您的HybridDB for MySQL实例同一地域且[网络类型](../../../../cn.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，有些模块又部署在与您的HybridDB for MySQL实例在不同的ECS上时。
+    -   适用于应用中有些模块部署在与您的HybridDB for MySQL实例同一地域且[网络类型](../../../../intl.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，有些模块又部署在与您的HybridDB for MySQL实例在不同的ECS上时。
 
-    -   适用于应用中有些模块部署在与您的HybridDB for MySQL实例在同一地域且[网络类型](../../../../cn.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，有些模块又部署在阿里云以外的系统上时。
+    -   适用于应用中有些模块部署在与您的HybridDB for MySQL实例在同一地域且[网络类型](../../../../intl.zh-CN/用户指南/管理实例/切换网络类型.md#)相同的ECS上，有些模块又部署在阿里云以外的系统上时。
 
 
 ## 注意事项 {#section_r3y_frl_x2b .section}
 
--   在访问数据库前，您需要将访问数据库的IP地址或者IP段加入白名单，操作请参见[设置白名单](cn.zh-CN/快速入门/设置白名单.md#)。
+-   在访问数据库前，您需要将访问数据库的IP地址或者IP段加入白名单，操作请参见[设置白名单](intl.zh-CN/快速入门/设置白名单.md#)。
 
 -   使用外网地址会降低实例的安全性，请谨慎选择。为了获得更快的传输速率和更高的安全级别，建议您将应用迁移到与您的HybridDB for MySQL在同一地域的ECS上。
 
@@ -44,5 +44,13 @@
 4.  在基本信息页面的连接信息处，单击**申请外网**。
 5.  系统弹出对话框，点击**确定**，生成外网地址。
 
+## 释放外网地址 {#section_bsr_nhx_yfb .section}
+
 生成外网地址后，可在基本信息页面的连接信息处，通过**释放外网地址**按键释放外网地址。
+
+**说明：** 
+
+-   执行释放外网地址之前，请先阅读本章节的应用场景。
+-   如果您的应用之前采用外网地址连接实例，在释放外网地址后，请您及时更改应用的连接设置。
+-   创建实例之后，如果还未申请外网地址， **释放外网地址**按键为灰色。
 
