--- a/cn.zh-CN/快速入门/申请外网地址.md
+++ b/cn.zh-CN/快速入门/申请外网地址.md
@@ -42,7 +42,7 @@
 2.  在管理控制台左上方选择实例所在**地域**。
 3.  在实例列表中点击**实例名称**或者**管理**，显示实例基本信息页面。
 4.  在基本信息页面的连接信息处，单击**申请外网**。
-5.  系统弹出对话框，点击**确定**，生成外网地址。
+5.  系统弹出对话框，单击**确定**，生成外网地址。
 
 ## 释放外网地址 {#section_bsr_nhx_yfb .section}
 
