--- a/cn.zh-CN/分析引擎手册/概念和限制/节点__数据库__表__分区__二级分区.md
+++ b/cn.zh-CN/分析引擎手册/概念和限制/节点__数据库__表__分区__二级分区.md
@@ -2,11 +2,11 @@
 
 ## 节点 {#section_ijq_bwb_wfb .section}
 
-在HybridDB for MySQL中，节点是一个资源单位（比如当前C2规格对应：8 Core 32GB Memory 720GB SSD）。 当前在阿里云的控制台中最多能够购买64个节点，如果有需要更多节点，可以通过购买后再扩容的方式完成。 HybridDB for MySQL的存储容量和计算性能随着节点的增加而线性提升。
+在HybridDB for MySQL中，节点是一个资源单位（比如当前C2规格对应：8 Core 32GB Memory 512GB SSD）。 当前在阿里云的控制台中最多能够购买64个节点，如果有需要更多节点，可以通过购买后再扩容的方式完成。 HybridDB for MySQL的存储容量和计算性能随着节点的增加而线性提升。
 
 ## 数据库 {#section_kwj_xwb_wfb .section}
 
-在HybridDB for MySQL中，数据库是用户的逻辑概念，用户通过Ceate Database或者通过阿里云控制台自动建好的数据库是一个逻辑库，在后端是会被切分成多个物理分库（shard），这些物理分库对于用户是不可见的。这就是通常说的分库分表（Sharding）技术。 通过Sharding技术，可以将用户数据打散到多个节点上，这样可以利用分布式的特性来进行并行计算，极大地提升性能。
+在HybridDB for MySQL中，数据库是用户的逻辑概念，用户通过阿里云控制台购买实例后会自动建好指定名称的逻辑库\(Database\)，该逻辑库在后端是会被切分成多个物理分库（Shard），这些物理分库对于用户是不可见的。这就是通常说的分库分表（Sharding）技术。通过Sharding技术，可以将用户数据打散到多个节点上，这样可以利用分布式的特性来进行并行计算，极大地提升性能。
 
 ## 表 {#section_hxd_sgj_5fb .section}
 
