--- a/cn.zh-CN/快速入门/新建实例.md
+++ b/cn.zh-CN/快速入门/新建实例.md
@@ -35,13 +35,15 @@
     |可用区| 可用区是地域中的一个独立物理区域，不同可用区之间没有实质性区别。您可以选择将实例与ECS实例创建在同一可用区或不同的可用区。
 
  |
-    |节点规格|目前提供两种节点规格：    -   高性能存储规格（TokuDB引擎）
-    -   高性能计算规格（CStore引擎）
-|
+    |节点规格| 目前仅提供一种节点规格。
+
+ |
     |网络|     -   经典网络：传统的网络类型。
     -   专有网络（推荐）：也称为VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。如果选择专有网络，你需要事先创建与实例在同一地域下的 VPC 和交换机，具体步骤请参考[专有网络](https://www.alibabacloud.com/help/zh/doc-detail/65398.html)。
  |
-    |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。|
+    |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。**说明：** HybridDB for MySQL仅支持单个数据库，实例创建后，用户不能再创建其他数据库。
+
+|
     |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。实例创建成功后，用户可通过实例名称下方的修改图标修改实例名称。|
     |密码|为实例账户的密码，请按照要求填写。|
     |节点数|默认节点数为两个，包年包月实例的节点上限为64个，按量付费实例的节点上限为128个。|
