--- a/intl.zh-CN/用户指南/管理实例/创建实例.md
+++ b/intl.zh-CN/用户指南/管理实例/创建实例.md
@@ -30,7 +30,7 @@
     |地域| 实例所在的地理位置。购买后无法更换地域。
 
      -   请根据目标用户所在的地理位置就近选择地域，提升用户访问速度。
-    -   请确保实例与需要连接的ECS实例创建于同一个地域，否则它们无法通过内网互通，只能通过外网互通，无法发挥最佳性能。
+    -   请确保实例与需要连接的ECS实例创建于同一个地域。不同地域的实例仅能通过外网互通，无法发挥最佳性能。
  |
     |可用区| 可用区是地域中的一个独立物理区域，不同可用区之间没有实质性区别。您可以选择将实例与ECS实例创建在同一可用区或不同的可用区。
 
@@ -44,7 +44,7 @@
     |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。**说明：** HybridDB for MySQL仅支持单个数据库，实例创建后，用户不能再创建其他数据库。
 
 |
-    |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。实例创建成功后，用户可通过实例名称下方的修改图标修改实例名称。|
+    |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。|
     |密码|为实例账户的密码，请按照要求填写。|
     |节点数|默认节点数为两个，包年包月实例的节点上限为64个，按量付费实例的节点上限为128个。|
 
