--- a/cn.zh-CN/分析引擎手册/DDL语法说明/表的创建和使用.md
+++ b/cn.zh-CN/分析引擎手册/DDL语法说明/表的创建和使用.md
@@ -211,9 +211,12 @@ ENGINE='CSTORE'
 
 ## 注意事项 {#section_pmh_jck_5fb .section}
 
--   默认编码为UTF-8，暂不支持指定其他编码格式。
+-   默认编码为UTF-8，相当于MySQL中的utf8mp4；暂不支持其他编码格式。
 -   DDL不支持表和列的重命名。
 -   DDL是online的，即在做DDL时无需锁表，查询不受影响。
 -   表名建议小写，默认忽略大小写，表名只接受大小写字母，数字和下划线，**不支持中文**。
--   目前支持的最大表数目为10000张。
+-   单表支持的最大列数为4096。
+-   字段属性不支持`on update current_timestamp`。
+-   表名长度最大为64字符，列名长度最大为64个字符。
+-   目前支持的最大表数目为单节点2000张，可随节点数目线性扩展。
 
