--- a/cn.zh-CN/分析引擎手册/性能优化建议/推荐连接池配合.md
+++ b/cn.zh-CN/分析引擎手册/性能优化建议/推荐连接池配合.md
@@ -40,9 +40,9 @@ public BasicDataSource rdsDataSource() {
 ```
 <bean id="petaDataSource" class="org.apache.commons.dbcp.BasicDataSource" destroy-method="close">
         <property name="driverClassName" value="com.mysql.jdbc.Driver"/>
-    <property name="url" value="jdbc:mysql://${petadata.db.ipport}/xianyu" />
-    <property name="username" value="xianyu" />
-    <property name="password" value="xianyu" />
+    <property name="url" value="jdbc:mysql://${petadata.db.ipport}/xxx" />
+    <property name="username" value="xxx" />
+    <property name="password" value="xxx" />
     <!-- 配置初始化大小、最小、最大 -->
     <property name="initialSize" value="1" />
     <property name="minIdle" value="1" />
