--- a/cn.zh-CN/事务引擎手册/DDL语法说明/创建表.md
+++ b/cn.zh-CN/事务引擎手册/DDL语法说明/创建表.md
@@ -13,6 +13,8 @@ DISTRIBUTE_KEY (column_name)
 DROP TABLE table_name
 ```
 
+**说明：** 在HybridDB for MySQL中创建表，必须指定分区键。
+
 ## 表定义示例： { .section}
 
 ```
