--- a/cn.zh-CN/用户指南/管理实例/创建实例.md
+++ b/cn.zh-CN/用户指南/管理实例/创建实例.md
@@ -4,9 +4,9 @@
 
 -   使用HybridDB for MySQL不需要购买RDS实例。
 
--   为了减少公网稳定性带来的性能损失，建议购买ECS与HybridDB for MySQL搭配使用；若没有购买ECS，用户也可以直接从公网连接访问HybridDB for MySQL。
+-   为了减少公网稳定性带来的性能损失，建议购买ECS与HybridDB for MySQL搭配使用；若没有购买ECS，您也可以直接从公网连接访问HybridDB for MySQL。
 
--   若用户需要创建节点更多或者节点规格更大的实例，请[联系我们](https://workorder.console.aliyun.com/console.htm?spm=5176.doc26327.2.2.8cFbee#/ticket/add?productCode=petadata)。
+-   若您需要创建节点更多或者节点规格更大的实例，请[联系我们](https://workorder.console.aliyun.com/console.htm?spm=5176.doc26327.2.2.8cFbee#/ticket/add?productCode=petadata)。
 
 ## 前提条件 { .section}
 
@@ -41,7 +41,7 @@
     |网络|     -   经典网络：传统的网络类型。
     -   专有网络（推荐）：也称为VPC（Virtual Private Cloud）。VPC是一种隔离的网络环境，安全性和性能均高于传统的经典网络。如果选择专有网络，你需要事先创建与实例在同一地域下的 VPC 和交换机，具体步骤请参考[专有网络](https://www.alibabacloud.com/help/zh/doc-detail/65398.html)。
  |
-    |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。**说明：** HybridDB for MySQL仅支持单个数据库，实例创建后，用户不能再创建其他数据库。
+    |数据库名称|为实例数据库的名称，不支持中文字符，一旦填写之后不可以修改。**说明：** HybridDB for MySQL仅支持单个数据库，实例创建后，您不能再创建其他数据库。
 
 |
     |实例账户|为用户访问数据库的账户，您可以填写有实际说明意义的内容。|
@@ -54,4 +54,8 @@
 
     HybridDB for MySQL数据库初始化需要一定时间，一般不超过20分钟，待管理控制台首页上实例运行状态显示为**运行中**，即可进行后续操作。
 
+
+## 补充 {#section_hnv_bvm_cgb .section}
+
+如果新建实例长时间处于**创建中**，一般是由于后端资源不足导致的，请您提交[工单](https://selfservice.console.aliyun.com/ticket/createIndex)处理。
 
