--- a/intl.zh-CN/产品定价/产品定价.md
+++ b/intl.zh-CN/产品定价/产品定价.md
@@ -1,4 +1,4 @@
 # 产品定价 {#concept_btx_fpl_x2b .concept}
 
-价格信息详情，参见 [云数据库HybridDB for MySQL详细价格信息](https://www.alibabacloud.com/zh/product/hybriddb-for-mysql/pricing)。
+价格信息详情，参见 [HybridDB for MySQL详细价格信息](https://www.alibabacloud.com/zh/product/hybriddb-for-mysql/pricing)。
 
