--- a/intl.zh-CN/用户指南/管理实例/释放实例.md
+++ b/intl.zh-CN/用户指南/管理实例/释放实例.md
@@ -15,10 +15,11 @@
 ## 操作步骤 { .section}
 
 1.  登录 [HybridDB for MySQL 管理控制台](https://petadata.console.aliyun.com/)。
-2.  定位目标实例，单击实例右侧的**管理**选项。
-3.  在实例信息页面，单击**释放实例**。
-4.  在释放实例的窗口，单击**确定**。
-5.  在手机验证的窗口，单击**获取校验码**，输入验证码后，单击**确定**。
+2.  在管理控制台左上方选择实例所在**地域**。
+3.  定位目标实例，单击实例右侧的**管理**选项。
+4.  在实例信息页面，单击**释放实例**。
+5.  在释放实例的窗口，单击**确定**。
+6.  在手机验证的窗口，单击**获取校验码**，输入验证码后，单击**确定**。
 
     **说明：** 释放后的实例不可恢复，请谨慎操作。
 
