--- a/cn.zh-CN/用户指南/管理实例/按量付费转包年包月.md
+++ b/cn.zh-CN/用户指南/管理实例/按量付费转包年包月.md
@@ -19,11 +19,12 @@
 ## 操作步骤 {#section_rzl_v3m_x2b .section}
 
 1.  登录 [HybridDB for MySQL 管理控制台](https://petadata.console.aliyun.com/)。
-2.  点击目标实例的名称，进入基本信息页面。
-3.  在左侧导航选择数据库管理。
-4.  在数据库列表中，点击目标数据库右侧的按量转包月。
-5.  在确认订单页面中，拖动**购买时长**滑块，勾选服务协议，然后点击**去开通**。
-6.  在确认订单页面，点击**确认支付**，系统提示支付成功，完成该操作。
+2.  在管理控制台左上方选择实例所在**地域**。
+3.  点击目标实例的名称，进入基本信息页面。
+4.  在左侧导航选择数据库管理。
+5.  在数据库列表中，点击目标数据库右侧的按量转包月。
+6.  在确认订单页面中，拖动**购买时长**滑块，勾选服务协议，然后点击**去开通**。
+7.  在确认订单页面，点击**确认支付**，系统提示支付成功，完成该操作。
 
 操作成功后，在数据库管理页面，对应数据库的付费类型显示上述操作所选择的的计费类型。
 
