--- a/cn.zh-CN/用户指南/管理数据库/数据库扩缩容.md
+++ b/cn.zh-CN/用户指南/管理数据库/数据库扩缩容.md
@@ -5,15 +5,16 @@
 **说明：** 数据库扩容过程中会发生闪断，请您在业务低峰期运行，并确保应用程序具备重连机制。
 
 1.  登录 [HybridDB for MySQL 管理控制台](https://petadata.console.aliyun.com/)，默认进入实例列表页面。
-2.  单击列表中的实例**ID**或者右侧的**管理**选项，进入基本信息页面。
-3.  单击左侧导航的**数据库管理**，进入该实例的数据库列表页面。
-4.  在数据库列表中，单击目标数据库右侧的**扩缩容**选项，进入数据库扩容页面。
+2.  在管理控制台左上方选择实例所在**地域**。
+3.  单击列表中的实例**ID**或者右侧的**管理**选项，进入基本信息页面。
+4.  单击左侧导航的**数据库管理**，进入该实例的数据库列表页面。
+5.  在数据库列表中，单击目标数据库右侧的**扩缩容**选项，进入数据库扩容页面。
 
     用户可以双倍地增加数据库的节点。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18503/154399837812247_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18503/154512609912247_zh-CN.png)
 
-5.  单击**去支付**按键完成操作。
+6.  单击**去支付**按键完成操作。
     -   目前系统默认为翻倍扩容。
     -   扩容后需要等待几分钟后才能正常使用，一般不超过20分钟。
     -   按量付费实例，扩容操作立即生效，在下一个计费时长（下一小时）按照新的规格计费。
