--- a/cn.zh-CN/分析引擎手册/DML语法说明/多值子列语法.md
+++ b/cn.zh-CN/分析引擎手册/DML语法说明/多值子列语法.md
@@ -23,7 +23,7 @@ INDEX_ALL='Y';
 |--|--|----|
 |tags|只有一个多值子列，用\`,\`分隔|每个用户可以打多个标签|
 |brands|第一个多值子列类型为varchar，用\`:\`分隔|表示每个用户偏好的品牌|
-|第二个多值子列子列类型为int，用\`,\`分隔|表示每个用户偏好品牌的偏好度（分数）|
+|第二个多值子列类型为int，用\`,\`分隔|表示每个用户偏好品牌的偏好度（分数）|
 
 ## 写入数据 {#section_enn_44q_5fb .section}
 
