--- a/cn.zh-CN/产品定价/到期或欠费影响.md
+++ b/cn.zh-CN/产品定价/到期或欠费影响.md
@@ -8,7 +8,7 @@
 |实例到期后第7天，实例被释放。|数据彻底被删除，无法恢复。|
 |按量付费|阿里云账号欠费后，该账号下所有按量付费实例将会变成欠费状态。-   欠费后如果在延停权益额度内，您的实例将不会停服。
 
-**说明：** 阿里云提供延停权益，即当按量付费的资源发生欠费后，提供一定额度或时长继续使用云服务的权益。延停期间正常计费。延停的权益额度不是欠费总额的上限。您延停的额度或时长根据您账号的官网等级（L）、历史消费情况等因素，每个月自动计算并更新。更多信息，请参见[延期免停权益](https://help.aliyun.com/document_detail/190777.html)。
+**说明：** 阿里云提供延停权益，即当按量付费的资源发生欠费后，提供一定额度或时长继续使用云服务的权益。延停期间正常计费。延停的权益额度不是欠费总额的上限。您延停的额度或时长根据您在阿里云的历史消费等因素，每个月自动计算并更新。更多信息，请参见[延期免停权益](https://help.aliyun.com/document_detail/190777.html)。
 
 -   超出延停额度后，阿里云会暂停该实例的服务，并停止计费。
 -   停服7天后，将视为用户主动放弃该实例，阿里云将释放该实例，其中的数据会被删除且不可恢复。
